--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,11 +4,17 @@
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.493);
+}
+
+body {
+    background-image: linear-gradient(to right,#a1a1a1, #575757, black);
 }
 
 .container {
     display: flex;
     flex-direction: column;
+    color: white;
 }
 
 #seção1 {
@@ -43,11 +49,19 @@
 
 #seção3 > div > a {
     display: block;
-    margin: 10px;
-    text-align: center;
+    width: 160px;
+    margin: auto;
 }
 
 #seção3 > div > a > img {
     width: 160px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.432);
+}
+
+#seção3 > div > a > img:hover {
+    transform: translate(-3px, -3px);
+    transition: transform 0.5s;
 }
 
